--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,21 @@
-/target/
-.idea
-.settings
-.vscode
+# Compiled class file
+*.class
+
+# Log file
+*.log
+
+# Package Files #
+*.jar
+*.war
+*.nar
+*.ear
+*.zip
+*.tar.gz
+*.rar
+
+.classpath
+.project
+.idea/
+.vscode/
+.settings/
+target/
